--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 body {
     width: 100%;
-    height: 100%;
     display: inline;
 }
 
@@ -21,15 +20,14 @@ body {
 
 .header-nav ul {
     width: 500px;
-    height: 50px;
     padding: 20px;
-    border: 1px solid black;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
 }
-.header-nav ul li{
+
+.header-nav ul li {
     list-style: none;
     font-size: 18px;
     color: white;
@@ -37,10 +35,12 @@ body {
     cursor: pointer;
     transition: .3s;
 }
-.header-nav ul li:hover{
+
+.header-nav ul li:hover {
     color: red;
 }
-.home-container{
+
+.home-container {
     width: 100%;
     height: 94vh;
     padding: 50px;
@@ -48,30 +48,179 @@ body {
     display: flex;
     align-items: center;
 }
-.home-page{
+
+.home-page {
     width: 50%;
     height: 90vh;
 }
-.home-page h1{
+
+.home-page h1 {
     font-size: 80px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     padding-top: 100px;
     padding-left: 50px;
     color: white;
 }
-.home-page p{
+
+.home-page p {
     font-size: 30px;
     padding-top: 30px;
     padding-left: 50px;
     color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.home-image-box{
+
+.home-image-box {
     width: 600px;
     height: 500px;
     margin-left: 100px;
 }
-.home-image-box img{
+
+.home-image-box img {
     width: 600px;
     height: 100%;
+}
+
+.About-page {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.884);
+    display: flex;
+}
+
+.About-page-box {
+    width: 50%;
+    margin: 20px;
+    padding: 15px;
+}
+
+.About-page-box h2 {
+    font-size: 100px;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.About-page-box p {
+    font-size: 50px;
+    color: white;
+    margin-top: 40px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.Authors-box {
+    width: 50%;
+    margin: 20px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+
+}
+
+.Authors-box h3 {
+    font-size: 100px;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    align-items: start;
+}
+
+.author-info {
+    width: 100%;
+    height: 350px;
+    padding: 10px;
+    gap: 100px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.author-info-box {
+    width: 300px;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.363);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    padding: 10px;
+    border-radius: 20px;
+    box-shadow: 0px 0 15px rgba(255, 255, 255, 0.705);
+}
+
+.author-img-box {
+    width: 150px;
+    height: 100px;
+    margin-top: 10px;
+    overflow: hidden;
+}
+
+.author-img-box img {
+    width: 100%;
+    height: 150px;
+}
+
+.author-info-box h3 {
+    font-size: 15px;
+    color: white;
+}
+
+.author-info-box p {
+    font-size: 12px;
+    color: white;
+}
+
+.article-page {
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.74);
+
+}
+
+.article-page-heading {
+    width: 100%;
+    height: 70px;
+    padding: 30px 0px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.article-page-heading h3 {
+    color: white;
+    font-size: 60px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.article-main-box {
+    width: 100%;
+    height: 430px;
+    margin-top: 10px;
+    gap: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.article-info-box {
+    width: 500px;
+    height: 400px;
+    margin: 20px;
+    padding: 10px;
+}
+
+.content-img-box {
+    width: 100%;
+    height: 300px;
+}
+.content-img-box img {
+    width: 100%;
+    height: 100%;
+}
+
+.article-info-box h2 {
+    font-size: 40px;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    color: white;
 }
