--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .header-nav {
     width: 100%;
     height: 60px;
-    background-color: rgb(0, 0, 0);
+    background-color: black;
     display: flex;
     justify-content: end;
     align-items: center;
@@ -83,8 +83,9 @@ body {
 
 .About-page {
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.884);
+    background-color: black;
     display: flex;
+    overflow: hidden;
 }
 
 .About-page-box {
@@ -97,23 +98,25 @@ body {
     font-size: 100px;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 50px;
 }
 
 .About-page-box p {
     font-size: 50px;
     color: white;
     margin-top: 40px;
+    margin-left: 30px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .Authors-box {
     width: 50%;
-    margin: 20px;
+    background-color: black;
+    /* margin: 20px; */
     padding: 15px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-
 }
 
 .Authors-box h3 {
@@ -135,28 +138,27 @@ body {
 
 .author-info-box {
     width: 300px;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.363);
+    height: 350px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 20px;
     padding: 10px;
-    border-radius: 20px;
-    box-shadow: 0px 0 15px rgba(255, 255, 255, 0.705);
+    border-radius: 10px;
+    cursor: pointer;
+    transition: .4s;
 }
-
 .author-img-box {
-    width: 150px;
-    height: 100px;
+    width: 200px;
+    height: 150px;
     margin-top: 10px;
     overflow: hidden;
 }
 
 .author-img-box img {
-    width: 100%;
-    height: 150px;
+    width: 200px;
+    height: 180px;
 }
 
 .author-info-box h3 {
@@ -165,14 +167,16 @@ body {
 }
 
 .author-info-box p {
-    font-size: 12px;
+    font-size: 14px;
     color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: 1px;
 }
 
 .article-page {
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.74);
+    background-color: black;
 
 }
 
@@ -180,7 +184,7 @@ body {
     width: 100%;
     height: 70px;
     padding: 30px 0px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.411);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -212,15 +216,25 @@ body {
 .content-img-box {
     width: 100%;
     height: 300px;
+    overflow: hidden;
+    cursor: pointer;
 }
 .content-img-box img {
     width: 100%;
     height: 100%;
+    transition: .5s;
 }
-
+.content-img-box img:hover{
+    transform: scale(1.2);
+}
 .article-info-box h2 {
     font-size: 40px;
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
+    transition: .5s;
+}
+.article-info-box:hover h2{
+    letter-spacing: 1px;
+
 }
